# Herd-Behaviour-Alerter

./: .dockerignore  Dockerfile  README.md  RECORD  alerting.py  api.py  app.py  demo.html  docker-compose.yml  herd-tracker.js  index.html  kafka_producer.py  main.py  package.json  pyproject.toml  pyvenv.cfg  requirements.txt  routes.py  schemas.py  service.py
